--- a/src/css/style.css
+++ b/src/css/style.css
@@ -448,10 +448,7 @@ section {
 }
 /* footer */
 .footer {
-   width: 100%;
-   min-height: 100px;
-   padding: 50px 40px;
-   margin: 0;
-   background: #222222c7;
-   font-size: 16px;
+	background-color: #262626;
+	color: #666666;
+	width: 100%;
 }
