--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -35,3 +35,25 @@
   }
 }
 } */
+
+ 
+@media (max-width: 880px) {
+ 
+  .footer-distributed{
+     font: bold 14px sans-serif;
+  }
+
+  .footer-distributed .footer-left,
+  .footer-distributed .footer-center,
+  .footer-distributed .footer-right{
+     display: block;
+     width: 100%;
+     margin-bottom: 40px;
+     text-align: center;
+  }
+
+  .footer-distributed .footer-center i{
+     margin-left: 0;
+  }
+
+}
